--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "arcanedev/log-viewer": "^4.3",
         "barryvdh/laravel-ide-helper": "^2.3",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
