--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "^2.3",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
