--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": "~7.1.0",
         "arcanedev/log-viewer": "^4.3",
         "barryvdh/laravel-ide-helper": "^2.3",
-        "guzzlehttp/guzzle": "^6.2",
+        "guzzlehttp/guzzle": "6.2.*",
+        "guzzlehttp/psr7": "1.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0"
