--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,16 @@
         "barryvdh/laravel-ide-helper": "^2.3",
         "guzzlehttp/guzzle": "6.2.*",
         "guzzlehttp/psr7": "1.3",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "doctrine/dbal": "~2.3"
+        "phpunit/phpunit": "^7.0",
+        "doctrine/dbal": "~2.3",
+        "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -41,12 +42,14 @@
             "php artisan key:generate"
         ],
         "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postInstall"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
