--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
+        "doctrine/dbal": "~2.3",
+        "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "^7.0",
-        "doctrine/dbal": "~2.3",
-        "filp/whoops": "~2.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
