Log every request + log viewer

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Europe/Warsaw
+
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=db
