--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": "~7.1.0",
-        "arcanedev/log-viewer": "^4.3",
+        "arcanedev/log-viewer": "4.5",
         "barryvdh/laravel-ide-helper": "^2.3",
         "guzzlehttp/guzzle": "6.2.*",
         "guzzlehttp/psr7": "1.3",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.6.4",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0"
+        "laravelcollective/html": "^5.4.0",
+        "monolog/monolog": "^1.23"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
