Remove ProcesFarmland queue job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             dockerfile: ./Dockerfile/php.Dockerfile
         volumes:
             - "./:/var/www"
+        user: ${UID}
     nginx:
         build:
             context: ./
