--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,5 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+SLACK_CHANNEL_URL=https://hooks.slack.com/services/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
