--- a/.env.example
+++ b/.env.example
@@ -35,4 +35,5 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
+LOG_SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
 SLACK_CHANNEL_URL=https://hooks.slack.com/services/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
